--- a/covid19/index-nl.html
+++ b/covid19/index-nl.html
@@ -370,7 +370,7 @@
       <div class="container" height="100%">
           <div class="project-text pt-0 text-lg-left">
               <p class="mb-3 text-black-50">
-                Vul hier uw suggesties in. Wanneer u meer dan één woord wilt suggereren, scheid de woorden dan met een ';'. 
+                Vul hier uw suggesties in. Wanneer u meer dan één woord wilt suggereren, scheid de woorden dan met een ';'.
                 <textarea id="suggestions" class="inputBox" placeholder="Suggesties" onkeydown="if (event.keyCode == 13){event.preventDefault(); addSuggestion(document.getElementById('suggestions').value, 'alertZonMwTran');}"></textarea>
                 <input type="button" value="Verstuur" style="display: inline-block;" onclick='addSuggestion(document.getElementById("suggestions").value, "alertZonMwTran");'/>
               </p>
@@ -407,7 +407,7 @@
 <!--================================================================-->
 
 <!-- Footer-->
-<footer class="footer bg-light small text-center text-black-50"><div class="container">&copy;2020 SignLab Amsterdam</div></footer>
+<footer class="footer bg-white small text-center text-black-50"><div class="container">&copy;2020 SignLab Amsterdam</div></footer>
 
 
 <!-- Javascripts -->
