--- a/covid19/index-nl.html
+++ b/covid19/index-nl.html
@@ -369,11 +369,12 @@
 <section class="projects-section bg-white" id="Suggestions">
       <div class="container" height="100%">
           <div class="project-text pt-0 text-lg-left">
+            <h4>Suggesties</h4>
               <p class="mb-3 text-black-50">
                 Vul hier uw suggesties in. Wanneer u meer dan één woord wilt voorstellen, scheid ze dan met een ';'. <br>
               </p>
               <p class="mb-3 text-black-50">
-                <textarea id="suggestions" class="inputBox" rows="4" placeholder="Suggesties" onkeydown="if (event.keyCode == 13){event.preventDefault(); addSuggestion(document.getElementById('suggestions').value, 'alertZonMwTran');}"></textarea>
+                <textarea id="suggestions" class="inputBox" rows="4" placeholder="Suggestie" onkeydown="if (event.keyCode == 13){event.preventDefault(); addSuggestion(document.getElementById('suggestions').value, 'alertZonMwTran');}"></textarea>
                 <input type="button" value="Verstuur" style="display: inline-block;" onclick='addSuggestion(document.getElementById("suggestions").value, "alertZonMwTran");'/>
               </p>
               <hr class="d-none d-lg-block mb-0 ml-0" />
