--- a/covid19/index.html
+++ b/covid19/index.html
@@ -369,16 +369,22 @@
 <!-- Suggestions section -->
 <section class="projects-section bg-white" id="Suggestions">
       <div class="container" height="100%">
-          <div class="project-text pt-0 text-lg-left">
-            <h4>Suggestions</h4>
-              <p class="mb-3 text-black-50">
-                Enter your suggestion here. If you have more than one word to suggest, separate them with ';'. <br>
-              </p>
-              <p class="mb-3 text-black-50">
-                <textarea id="suggestions" class="inputBox" rows="4" cols="10" placeholder="Suggestion" onkeydown="if (event.keyCode == 13){event.preventDefault(); addSuggestion(document.getElementById('suggestions').value, 'alertZonMwTran');}"></textarea>
-                <input type="button" value="Send" style="display: inline-block;" onclick='addSuggestion(document.getElementById("suggestions").value, "alertZonMwTran");'/>
-              </p>
-              <hr class="d-none d-lg-block mb-0 ml-0" />
+        <div class="row align-items-start no-gutters mb-4 mb-lg-5">
+
+            <!-- Column for suggestoins  -->
+            <div class="col-xl-auto">
+              <div class="project-text pt-0 text-lg-left">
+                <h4>Suggestions</h4>
+                  <p class="mb-3 text-black-50">
+                    Enter your suggestion here. If you have more than one word to suggest, separate them with ';'. <br>
+                  </p>
+                  <p class="mb-3 text-black-50">
+                    <textarea id="suggestions" class="inputBox" rows="4" cols="10" placeholder="Suggestion" onkeydown="if (event.keyCode == 13){event.preventDefault(); addSuggestion(document.getElementById('suggestions').value, 'alertZonMwTran');}"></textarea>
+                    <input type="button" value="Send" style="display: inline-block;" onclick='addSuggestion(document.getElementById("suggestions").value, "alertZonMwTran");'/>
+                  </p>
+                  <hr class="d-none d-lg-block mb-0 ml-0" />
+              </div>
+            </div>
           </div>
       </div>
 </section>
