--- a/covid19/index.html
+++ b/covid19/index.html
@@ -370,8 +370,7 @@
 <section class="projects-section bg-white" id="Suggestions">
       <div class="container" height="100%">
         <div class="row align-items-start no-gutters mb-4 mb-lg-5">
-
-            <!-- Column for suggestoins  -->
+            <!-- Column for suggestions  -->
             <div class="col-xl-auto">
               <div class="project-text pt-0 text-lg-left">
                 <h4>Suggestions</h4>
