--- a/covid19/index-nl.html
+++ b/covid19/index-nl.html
@@ -334,15 +334,15 @@
 
                     <p class="text-black-50 mb-3">
                          We zijn
-                         <a href="https://people.uea.ac.uk/j_glauert" target="_blank">John Glauert</a> vooral dankbaar, voor het beschikbaar maken van een distributie van de software voor ons project.<br>
+                         <a href="https://people.uea.ac.uk/j_glauert" target="_blank">John Glauert</a> uitzonderlijk dankbaar, voor het beschikbaar maken van een distributie van de software voor ons project.<br>
                     </p>
 
-                    <h5>University of Geneva</h5>
+                    <h5>Universiteit van Genève</h5>
                     <p class="mb-3 text-black-50 mt-1">
                         De
                         <a href="https://www.unige.ch/fti/en/faculte/departements/dtim/" target="_blank">Afdeling Vertaaltechnologie</a>
                         van de
-                        <a href="https://www.unige.ch/" target="_blank">University of Geneva</a>
+                        <a href="https://www.unige.ch/" target="_blank">Universiteit van Genève</a>
                         ontwikkelt een vergelijkbare vertalings-tool voor Zwitsers-Franse Gebarentaal als onderdeel van het
                         <a href="https://babeldr.unige.ch/" target="_blank">BabelDr project</a>.
                     </p>
