--- a/covid19/index-nl.html
+++ b/covid19/index-nl.html
@@ -443,7 +443,7 @@
 <!-- script for shared functions across all pages -->
 <script language="javascript" type="text/javascript" src="../js/generalJS.js"></script>
 <!-- script specific to zonmw project -->
-<script language="javascript" type="text/javascript" src="zonmwJS.js"></script>
+<script language="javascript" type="text/javascript" src="zonmwJS-nl.js"></script>
 
 
 </body>
