--- a/covid19/index.html
+++ b/covid19/index.html
@@ -201,20 +201,20 @@
 
               <div id="daysBox" class="undisplayed">
                <label for="days" style="display: inline-block;">Number of days:</label>
-               <input type="number" id="days" name="days" min="1" max="20" value="1" style="display: inline-block;">
-               <input type="submit" style="display: inline-block;" onclick="if(1 > document.getElementById('days').value > 20){alertMessage('error','Please input a number between 0 and 21','alertZonMwTran');} else{toSiGML(document.getElementById('mySiGML').value, document.getElementById('days').value);}">
+               <input type="number" id="days" name="days" min="1" max="14" value="1" style="display: inline-block;">
+               <input type="submit" style="display: inline-block;" onclick="if(1 > document.getElementById('days').value > 14){alertMessage('error','Please input a number between 0 and 15','alertZonMwTran');} else{toSiGML(document.getElementById('mySiGML').value, document.getElementById('days').value);}">
               </div>
 
               <div id="weeksBox" class="undisplayed">
                <label for="weeks" style="display: inline-block;">Number of weeks:</label>
-               <input type="number" id="weeks" name="weeks" min="1" max="" value="1" style="display: inline-block;">
-               <input type="submit" style="display: inline-block;" onclick="if(1 > document.getElementById('weeks').value > 11){alertMessage('error','Please input a number between 0 and 12','alertZonMwTran');} else{toSiGML(document.getElementById('mySiGML').value, document.getElementById('weeks').value);}">
+               <input type="number" id="weeks" name="weeks" min="1" max="10" value="1" style="display: inline-block;">
+               <input type="submit" style="display: inline-block;" onclick="if(1 > document.getElementById('weeks').value > 10){alertMessage('error','Please input a number between 0 and 12','alertZonMwTran');} else{toSiGML(document.getElementById('mySiGML').value, document.getElementById('weeks').value);}">
               </div>
 
               <div id="monthsBox" class="undisplayed">
                <label for="months" style="display: inline-block;">Number of months:</label>
-               <input type="number" id="months" name="months" min="1" max="" value="1" style="display: inline-block;">
-               <input type="submit" style="display: inline-block;" onclick="if(1 > document.getElementById('months').value > 11){alertMessage('error','Please input a number between 0 and 12','alertZonMwTran');} else{toSiGML(document.getElementById('mySiGML').value, document.getElementById('months').value);}">
+               <input type="number" id="months" name="months" min="1" max="18" value="1" style="display: inline-block;">
+               <input type="submit" style="display: inline-block;" onclick="if(1 > document.getElementById('months').value > 18){alertMessage('error','Please input a number between 0 and 19','alertZonMwTran');} else{toSiGML(document.getElementById('mySiGML').value, document.getElementById('months').value);}">
               </div>
 
               <br>
