--- a/covid19/index.html
+++ b/covid19/index.html
@@ -217,6 +217,18 @@
                <input type="submit" style="display: inline-block;" onclick="if(1 > document.getElementById('months').value > 18){alertMessage('error','Please input a number between 0 and 19','alertZonMwTran');} else{toSiGML(document.getElementById('mySiGML').value, document.getElementById('months').value);}">
               </div>
 
+              <div id="systolicBPBox" class="undisplayed">
+               <label for="systolicBP" style="display: inline-block;">Systolic value:</label>
+               <input type="number" id="systolicBP" name="systolicBP" min="70" max="190" value="1" style="display: inline-block;">
+               <input type="submit" style="display: inline-block;" onclick="if(70 > document.getElementById('systolicBP').value > 190){alertMessage('error','Please input a number between 69 and 191','alertZonMwTran');} else{toSiGML(document.getElementById('mySiGML').value, document.getElementById('systolicBP').value);}">
+              </div>
+
+              <div id="diastolicBPBox" class="undisplayed">
+               <label for="diastolicBP" style="display: inline-block;">Diastolic value:</label>
+               <input type="number" id="diastolicBP" name="diastolicBP" min="40" max="100" value="1" style="display: inline-block;">
+               <input type="submit" style="display: inline-block;" onclick="if(40 > document.getElementById('diastolicBP').value > 100){alertMessage('error','Please input a number between 39 and 101','alertZonMwTran');} else{toSiGML(document.getElementById('mySiGML').value, document.getElementById('diastolicBP').value);}">
+              </div>
+
               <br>
               <input type="button" class="btn btn-primary" id="play" value="Play" onclick='toSiGML(document.getElementById("mySiGML").value);'/>
               <input type="button" class="btn btn-primary" value="Stop" onclick='CWASA.stopSiGML();' />
