alle containers zijn nu container-fluid

--- a/covid19/index.html
+++ b/covid19/index.html
@@ -48,7 +48,7 @@
 
 <!-- Navigation-->
 <nav class="navbar navbar-shrink navbar-expand-lg navbar-light fixed-top" id="mainNav">
-    <div class="container">
+    <div class="container-fluid">
         <a class="navbar-brand js-scroll-trigger" href="../index.html">
         <img src="../images/hand-icon.png" height="25">
           SignLab Amsterdam
@@ -87,7 +87,7 @@
 
 <!-- ProjectInfo -->
 <section class="projects-section bg-light" id="ProjectInfo">
-    <div class="container">
+    <div class="container-fluid">
         <!-- Challenge Row-->
         <div class="row justify-content-center align-items-start no-gutters mb-2 mb-lg-0">
             <div class="col-lg">
@@ -280,7 +280,7 @@
 <!-- About us section -->
 <section class="projects-section bg-light" id="About">
 
-    <div class="container" height="100%">
+    <div class="container-fluid" height="100%">
 
         <div class="row align-items-start no-gutters mb-4 mb-lg-5">
 
@@ -367,7 +367,7 @@
 
 <!-- Suggestions section -->
 <section class="projects-section bg-white" id="Suggestions">
-      <div class="container" height="100%">
+      <div class="container-fluid" height="100%">
         <div class="row align-items-start no-gutters mb-4 mb-lg-5">
             <!-- Column for suggestions  -->
             <div class="col-xl-auto">
@@ -393,7 +393,7 @@
 
 <!-- Resources section -->
 <section class="projects-section bg-light" id="Resources">
-      <div class="container" height="100%">
+      <div class="container-fluid" height="100%">
           <div class="project-text pt-0 text-lg-left">
               <p class="mb-3 text-black-50">
                 The
