--- a/covid19/index.html
+++ b/covid19/index.html
@@ -231,8 +231,8 @@
 
               <div id="timeBox" class="md-form md-outline input-with-post-icon timepicker" default="now">
                <input type="text" id="manualOperations" class="form-control" placeholder="Select time">
-               <label for="manualOperations"></label>
-                <i class="fas fa-envelope  input-prefix"></i>
+               <label for="manualOperations">Select a time</label>
+               <i class="fas fa-envelope  input-prefix"></i>
               </div>
 
               <br>
