--- a/covid19/index.html
+++ b/covid19/index.html
@@ -232,7 +232,7 @@
               <div class="md-form md-outline input-with-post-icon timepicker" default="now">
                <input type="text" id="timeBox" class="form-control" placeholder="Select time">
                <label for="timeBox"></label>
-               <i class="fas fa-envelope  input-prefix"></i>
+               <i class="fas fa-clock input-prefix"></i>
               </div>
 
               <br>
