submit knop voor time select

--- a/covid19/index.html
+++ b/covid19/index.html
@@ -230,7 +230,8 @@
               </div>
 
               <div id="timeBox" class="md-form">
-               <input type="text" class="form-control" placeholder="Select a time">
+               <input id="timeInput" type="text" class="form-control" placeholder="Click here to select a time">
+               <input type="submit">
               </div>
 
               <br>
