submit knop voor time select

--- a/covid19/index.html
+++ b/covid19/index.html
@@ -234,6 +234,11 @@
                <input type="submit">
               </div>
 
+              <div class="md-form">
+               <input placeholder="Selected time" type="text" id="input_starttime" class="form-control timepicker">
+               <label for="input_starttime">Light version, 12hours</label>
+              </div>
+
               <br>
               <input type="button" class="btn btn-primary" id="play" value="Play" onclick='toSiGML(document.getElementById("mySiGML").value);'/>
               <input type="button" class="btn btn-primary" value="Stop" onclick='CWASA.stopSiGML();' />
