submit knop voor time select

--- a/covid19/index.html
+++ b/covid19/index.html
@@ -230,8 +230,8 @@
               </div>
 
               <div id="timeBox" class="md-form">
-               <input id="timeInput" type="text" class="form-control" placeholder="Click here to select a time">
-               <input type="submit">
+               <input id="timeInput" type="text" class="form-control" placeholder="Click here to select a time" style="display: inline-block;">
+               <input type="submit" style="display: inline-block;">
               </div>
 
               <div class="md-form">
