css and js for bootstrap timepicker

--- a/covid19/index.html
+++ b/covid19/index.html
@@ -31,6 +31,8 @@
 <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/smoothness/jquery-ui.css"></link>
 <!-- Bootstrap core CSS -->
 <link rel="stylesheet" href="../css/bootstrap.min.css">
+<!-- Timepicker css -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-timepicker/0.5.2/css/bootstrap-timepicker.min.css">
 <!-- CSS for question circle -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 <!-- CSS file for bootstrap grayscale theme -->
@@ -454,6 +456,8 @@
 <script type="text/javascript" src="../js/grayscalescript.js"></script>
 <!-- Javascript for smooth scrolling-->
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
+<!-- script for timepicker -->
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-timepicker/0.5.2/js/bootstrap-timepicker.js"></script>
 
 <!-- script for generating avatar animations -->
 <script type="text/javascript" src="../cwa/allcsa.js"> </script>
