--- a/covid19/index.html
+++ b/covid19/index.html
@@ -236,10 +236,10 @@
                <input type="submit" style="display: inline-block;">
               </div>
 
-              <div class="md-form">
+             <!--  <div class="md-form">
                <input placeholder="Selected time" type="text" id="input_starttime" class="form-control timepicker">
                <label for="input_starttime">Light version, 12hours</label>
-              </div>
+              </div> -->
 
               <br>
               <input type="button" class="btn btn-primary" id="play" value="Play" onclick='toSiGML(document.getElementById("mySiGML").value);'/>
