--- a/covid19/index.html
+++ b/covid19/index.html
@@ -231,7 +231,7 @@
                <input type="submit" style="display: inline-block;" onclick="if(40 > document.getElementById('diastolicBP').value > 100){alertMessage('error','Please input a number between 39 and 101','alertZonMwTran');} else{toSiGML(document.getElementById('mySiGML').value, document.getElementById('diastolicBP').value);}">
               </div>
 
-              <div id="timeBox" class="md-form bootstrap-timepicker">
+              <div id="timeBox" class="bootstrap-timepicker">
                <input id="timeInput" type="text" class="form-control" placeholder="Click here to select a time" style="display: inline-block;">
                <input type="submit" style="display: inline-block;">
               </div>
@@ -461,6 +461,10 @@
 
 <!-- script for generating avatar animations -->
 <script type="text/javascript" src="../cwa/allcsa.js"> </script>
+
+<script type="text/javascript">
+  $('.timepicker').timepicker();
+</script>
 
 
 <!-- =============================================== -->
