--- a/covid19/index.html
+++ b/covid19/index.html
@@ -232,7 +232,7 @@
               </div>
 
               <div id="timeBox" class="bootstrap-timepicker">
-               <input id="timeInput" type="text" class="form-control" placeholder="Click here to select a time" style="display: inline-block;">
+               <input id="timeInput" type="text" class="timepicker form-control" placeholder="Click here to select a time" style="display: inline-block;">
                <input type="submit" style="display: inline-block;">
               </div>
 
