--- a/covid19/index.html
+++ b/covid19/index.html
@@ -231,15 +231,10 @@
                <input type="submit" style="display: inline-block;" onclick="if(40 > document.getElementById('diastolicBP').value > 100){alertMessage('error','Please input a number between 39 and 101','alertZonMwTran');} else{toSiGML(document.getElementById('mySiGML').value, document.getElementById('diastolicBP').value);}">
               </div>
 
-              <div id="timeBox" class="md-form bootstrap-timepicker">
-               <input id="timeInput" type="text" class="timepicker form-control" style="display: inline-block;">
+              <div id="timeBox" class="md-form">
+               <input id="timeInput" type="text" class="form-control timepicker" style="display: inline-block;">
                <input type="submit" style="display: inline-block;">
               </div>
-
-             <!--  <div class="md-form">
-               <input placeholder="Selected time" type="text" id="input_starttime" class="form-control timepicker">
-               <label for="input_starttime">Light version, 12hours</label>
-              </div> -->
 
               <br>
               <input type="button" class="btn btn-primary" id="play" value="Play" onclick='toSiGML(document.getElementById("mySiGML").value);'/>
