--- a/covid19/index.html
+++ b/covid19/index.html
@@ -458,10 +458,10 @@
 <script type="text/javascript" src="../cwa/allcsa.js"> </script>
 
 <script type="text/javascript">
-  $('#timeInput').pickatime({
-   autoclose: true,
-   'default': 'now'
-});
+  $('.timepicker').timepicker({
+    autoclose: true,
+    'default': 'now'
+  });
 </script>
 
 
