--- a/covid19/index.html
+++ b/covid19/index.html
@@ -231,7 +231,7 @@
                <input type="submit" style="display: inline-block;" onclick="if(40 > document.getElementById('diastolicBP').value > 100){alertMessage('error','Please input a number between 39 and 101','alertZonMwTran');} else{toSiGML(document.getElementById('mySiGML').value, document.getElementById('diastolicBP').value);}">
               </div>
 
-              <div id="timeBox" class="md-form">
+              <div id="timeBox" class="md-form bootstrap-timepicker timepicker">
                <input id="timeInput" type="text" class="form-control timepicker" style="display: inline-block;">
                <!-- <input type="submit" style="display: inline-block;"> -->
               </div>
