--- a/covid19/index.html
+++ b/covid19/index.html
@@ -460,7 +460,8 @@
 <script type="text/javascript">
   $('.timepicker').timepicker({
     autoclose: true,
-    'default': 'now'
+    'default': 'now',
+    showInputs: false
   });
 </script>
 
