--- a/covid19/index.html
+++ b/covid19/index.html
@@ -461,7 +461,7 @@
 <script type="text/javascript">
   $('.timepicker').timepicker({
     'default': 'now',
-    showInputs: true
+    showInputs: false
   });
 </script>
 
