--- a/covid19/index.html
+++ b/covid19/index.html
@@ -158,6 +158,7 @@
         <span id="avatar" class="CWASAAvatar av0" align="left" style="text-align: left;"></span>
         <!--================================================================-->
 
+        <script>startPose();</script>    
 
         <span id="videos" class="undisplayed" align="left" style="text-align: left;">
           <iframe id="videoHolder" width="600" height="500" src="https://www.youtube-nocookie.com/embed/gsFNU0RL8nI?rel=0&amp;showinfo=0&amp;mute=1&amp;loop=1&amp;playlist=gsFNU0RL8nI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture; fullscreen"></iframe>
