--- a/covid19/index-nl.html
+++ b/covid19/index-nl.html
@@ -155,6 +155,7 @@
         <span id="avatar" class="CWASAAvatar av0" align="left" ></span>
         <!--================================================================-->
 
+        <script>startPose();</script>
 
         <span id="videos" class="undisplayed" align="left">
           <iframe id="videoHolder" width="600" height="500" src="https://www.youtube-nocookie.com/embed/gsFNU0RL8nI?rel=0&amp;showinfo=0&amp;mute=1&amp;loop=1&amp;playlist=gsFNU0RL8nI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture; fullscreen"></iframe>
@@ -172,7 +173,7 @@
 
             <br>
              <!-- DDefines the button and label displayed for the option "avatar" -->
-              <input type="radio" id="avatarDisplay" name="display" value="avatar" checked onclick="changeFunc(this);">
+              <input type="radio" id="avatarDisplay" name="display" value="avatar" checked onclick="changeFunc(this); startPose();">
               <label for="avatar" style="margin-right: 5px">Avatar vertaling</label>
 
               <br>
