--- a/covid19/index.html
+++ b/covid19/index.html
@@ -473,7 +473,7 @@
 <script language="javascript" type="text/javascript" src="../js/generalJS.js"></script>
 <!-- script specific to zonmw project -->
 <script language="javascript" type="text/javascript" src="zonmwJS.js"></script>
-<script>startPose();</script>
+<script type="text/javascript">startPose();</script>
 
 
 </body>
