--- a/covid19/index.html
+++ b/covid19/index.html
@@ -155,7 +155,7 @@
         <!-- CWA signing avatar panel 0 -->
         <!--================================================================-->
         <!-- <div class="CWASAPanel av0" align="center" ></div> -->
-        <span id="avatar" class="CWASAAvatar av0" align="left" style="text-align: left;"></span>
+        <span id="avatar" class="CWASAAvatar av0" align="left" style="text-align: left;" onload="startPose();"></span>
         <!--================================================================-->
 
         <span id="videos" class="undisplayed" align="left" style="text-align: left;">
@@ -473,8 +473,6 @@
 <script language="javascript" type="text/javascript" src="../js/generalJS.js"></script>
 <!-- script specific to zonmw project -->
 <script language="javascript" type="text/javascript" src="zonmwJS.js"></script>
-<script type="text/javascript">startPose();</script>
-
 
 </body>
 </html>
