--- a/covid19/index-nl.html
+++ b/covid19/index-nl.html
@@ -152,7 +152,7 @@
         <!-- CWA signing avatar panel 0 -->
         <!--================================================================-->
         <!-- <div class="CWASAPanel av0" align="center" ></div> -->
-        <span id="avatar" class="CWASAAvatar av0" align="left" onload="startPose();"></span>
+        <span id="avatar" class="CWASAAvatar av0" align="left"></span>
         <!--================================================================-->
 
         <span id="videos" class="undisplayed" align="left">
@@ -443,6 +443,7 @@
 <script language="javascript" type="text/javascript" src="../js/generalJS.js"></script>
 <!-- script specific to zonmw project -->
 <script language="javascript" type="text/javascript" src="zonmwJSNL.js"></script>
+<script type="text/javascript">startPose();</script>
 
 </body>
 </html>
