--- a/covid19/index-nl.html
+++ b/covid19/index-nl.html
@@ -443,7 +443,7 @@
 <script language="javascript" type="text/javascript" src="../js/generalJS.js"></script>
 <!-- script specific to zonmw project -->
 <script language="javascript" type="text/javascript" src="zonmwJSNL.js"></script>
-<script type="text/javascript">window.onload = startPose</script>
+<script language="javascript" type="text/javascript" src="zonmwJS.js">window.onload = startPose</script>
 
 </body>
 </html>
