--- a/covid19/index.html
+++ b/covid19/index.html
@@ -42,7 +42,7 @@
 
 </head>
 
-<body id="page-top" onload="CWASA.init();">
+<body id="page-top" onload="CWASA.init(); startPose();">
 
 
 <!--================================================================-->
@@ -473,7 +473,6 @@
 <script language="javascript" type="text/javascript" src="../js/generalJS.js"></script>
 <!-- script specific to zonmw project -->
 <script language="javascript" type="text/javascript" src="zonmwJS.js"></script>
-<script language="javascript" type="text/javascript" src="zonmwJS.js">startPose();</script>
 
 </body>
 </html>
