--- a/covid19/index.html
+++ b/covid19/index.html
@@ -42,7 +42,7 @@
 
 </head>
 
-<body id="page-top" onload="CWASA.init(); startPose();">
+<body id="page-top" onload="CWASA.init();">
 
 
 <!--================================================================-->
