time selector glyphicons override

--- a/covid19/index.html
+++ b/covid19/index.html
@@ -462,7 +462,7 @@
     'default': 'now',
     showInputs: false,
     autoclose: true,
-    afterDone: alert("Hi");
+    afterDone: alert("Hi"),
     'donetext': "Done",
   });
 </script>
