--- a/covid19/index.html
+++ b/covid19/index.html
@@ -231,8 +231,8 @@
               </div>
 
               <div id="timeBox" class="md-form">
-               <input id="timeInput" type="text" class="form-control timepicker">
-               <!-- <input type="submit" style="display: inline-block;"> -->
+               <input id="timeInput" type="text" class="form-control timepicker" style="width: 100px;display: inline-block;">
+               <input type="submit" style="display: inline-block;" onclick="alert(document.getElementById('timeInput').value);">
               </div>
 
               <br>
