--- a/covid19/index.html
+++ b/covid19/index.html
@@ -232,7 +232,7 @@
 
               <div id="timeBox" class="md-form">
                <input id="timeInput" type="text" class="form-control timepicker" style="width: 100px;display: inline-block;">
-               <input type="submit" style="display: inline-block;" onclick="alert(document.getElementById('timeInput').value);">
+               <input type="submit" style="display: inline-block;" onclick="alert(typeof document.getElementById('timeInput').value);">
               </div>
 
               <br>
