24 uur format timepicker

--- a/covid19/index.html
+++ b/covid19/index.html
@@ -461,7 +461,8 @@
   $('.timepicker').timepicker({
     'default': 'now',
     showInputs: false,
-    use24hours: true
+    use24hours: true,
+    format: 'HH:mm'
   });
 </script>
 
