24 uur format timepicker

--- a/covid19/index.html
+++ b/covid19/index.html
@@ -462,7 +462,8 @@
     'default': 'now',
     showInputs: false,
     use24hours: true,
-    format: 'HH:mm'
+    format: 'HH:mm',
+    showMeridian: false
   });
 </script>
 
