now more accurate?

--- a/covid19/index.html
+++ b/covid19/index.html
@@ -463,7 +463,8 @@
     showInputs: false,
     use24hours: true,
     format: 'HH:mm',
-    showMeridian: false
+    showMeridian: false,
+    fromnow: 0,
   });
 </script>
 
