now more accurate?

--- a/covid19/index.html
+++ b/covid19/index.html
@@ -231,7 +231,7 @@
               </div>
 
               <div id="timeBox" class="md-form">
-               <input id="timeInput" type="text" class="form-control timepicker" :increment-minutes="1" style="width: 100px;display: inline-block;">
+               <input id="timeInput" type="text" class="form-control timepicker" style="width: 100px;display: inline-block;">
                <input type="submit" style="display: inline-block;" onclick="alert(document.getElementById('timeInput').value);">
               </div>
 
