login pagina probeersel

--- a/covid19/index.html
+++ b/covid19/index.html
@@ -44,6 +44,13 @@
 
 <body id="page-top" onload="CWASA.init();">
 
+<div id="pwdAlert"></div>
+<div id="checkPage">
+  <label for="pwd" style="display: inline-block;">password: </label>
+  <input type="password" id="pwd" style="display: inline-block;">
+  <input type="submit" onclick="compare(field.value);" style="display: inline-block;">
+</div>
+
 
 <!--================================================================-->
 
