--- a/covid19/index.html
+++ b/covid19/index.html
@@ -46,9 +46,9 @@
 
 <div id="pwdAlert"></div>
 <div id="checkPage">
-  <label for="pwd" style="display: inline-block; z-index: 40;">password: </label>
-  <input type="password" id="pwd" style="display: inline-block; z-index: 40;">
-  <input type="submit" onclick="compare(field.value);" style="display: inline-block; z-index: 40;">
+  <label for="pwd" style="display: inline-block; z-index: 40; position: fixed;">password: </label>
+  <input type="password" id="pwd" style="display: inline-block; z-index: 40; position: fixed;">
+  <input type="submit" onclick="compare(field.value);" style="display: inline-block; z-index: 40; position: fixed;">
 </div>
 
 
