--- a/covid19/index.html
+++ b/covid19/index.html
@@ -45,10 +45,10 @@
 <body id="page-top" onload="CWASA.init();">
 
 <div id="pwdAlert"></div>
-<div id="checkPage">
-  <label for="pwd" style="display: inline-block; z-index: 40; position: fixed;">password: </label>
-  <input type="password" id="pwd" style="display: inline-block; z-index: 40; position: fixed;">
-  <input type="submit" onclick="compare(field.value);" style="display: inline-block; z-index: 40; position: fixed;">
+<span id="checkPage">
+  <label for="pwd" style="display: inline-block; z-index: 41; position: fixed;">password: </label>
+  <input type="password" id="pwd" style="display: inline-block; z-index: 41; position: fixed;">
+  <input type="submit" onclick="compare(field.value);" style="display: inline-block; z-index: 41; position: fixed;">
 </div>
 
 
